[tool.poetry]
name = "devcontainers"
version = "0.1.0"
description = "Test for devcontainers"
authors = ["Vincent Codes Finance <vincent@codes.finance>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
